# Test_assignment_topics_of_building_power_grids

./: CMakeLists.txt  Readme.md  config.json  roads1.geojson
include/: config.h  geojson_writer.h  geometry.h  graph.h  hdd.h  io.h  roads.h
src/: geojson_writer.cpp  graph.cpp  hdd.cpp  io.cpp  main.cpp
